# python-uv

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/actions/setup-python-with-uv/: action.yml
.github/workflows/: docs.yml  main.yml
docs/: mkdocs.yml
docs/.obsidian/: community-plugins.json  workspace.json
docs/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json  styles.css
docs/.obsidian/plugins/obsidian-git/: data.json  main.js
docs/.obsidian/plugins/obsidian-latex-suite/: main.js
docs/.obsidian/plugins/obsidian-linter/: data.json
docs/.obsidian/themes/Minimal/: theme.css
scripts/: lint.sh
src/: main.py
tests/: test_advanced.py  test_data.py  test_main.py
